@@ -273,6 +273,9 @@ gdb_test_multiple_with_read1_timeout_factor 10 "$test" $testname {
 
 set test "info macros info-macros.c:42"
 
-set r1 "#define DEF_MACROS"
+set r1 "#define DEF_MACROS "
 set r2 "#define ONE"
-gdb_test_lines "$test" "" [list $r1 "--any" $r2]
+gdb_test_lines "$test" "" [multi_line \
+			       "" \
+			       "$r1" \
+			       "(.*\r\n)?$r2"]
